# yolo26-multitask

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: BATCH_SPEC.md  PROJECT_PLAN.md
tests/: test_batch_spec.py  test_data_pipeline.py  test_multitask26.py
ymt/: __init__.py  batch.py  model.py
