[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo26-multitask"
version = "0.1.0"
description = "Multitask YOLO26 (Ultralytics fork): shared backbone+FPN, separate det/pose/seg heads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ymt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "third_party/ultralytics"]
